<resources>
    <string name="app_name" translatable="false">Holla Browser</string>
    <string name="app_version_name" translatable="false">\"Releases\"</string>
    <string name="accent_amber">Amber</string>
    <string name="accent_blue">Blue</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_cyan">Cyan</string>
    <string name="accent_deep_orange">Deep Orange</string>
    <string name="accent_deep_purple">Deep Purple</string>
    <string name="accent_default">Default (Red)</string>
    <string name="accent_green">Green</string>
    <string name="accent_indigo">Indigo</string>
    <string name="accent_light_blue">Light Blue</string>
    <string name="accent_light_green">Light Green</string>
    <string name="accent_lime">Lime</string>
    <string name="accent_orange">Orange</string>
    <string name="accent_pink">Pink</string>
    <string name="accent_purple">Purple</string>
    <string name="accent_teal">Teal</string>
    <string name="accent_yellow">Yellow</string>
    <string name="accent_brown">Brown</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_add_to_homescreen">Add to home screen</string>
    <string name="action_allow">Allow</string>
    <string name="action_back">Back</string>
    <string name="action_blank">Blank page</string>
    <string name="action_bookmark_edited">Bookmark edited</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close_all_other_tabs">Close all other tabs</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="action_delete">Delete</string>
    <string name="action_dont_allow">Don\'t allow</string>
    <string name="action_download">Download</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_edit_sessions">Edit sessions</string>
    <string name="action_find">Find in page</string>
    <string name="action_folder">Folder</string>
    <string name="action_forward">Forward</string>
    <string name="action_history">History</string>
    <string name="action_homepage">Default</string>
    <string name="action_incognito">Go incognito</string>
    <string name="action_message_canceled">Action canceled.</string>
    <string name="action_more">More</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_open">Open</string>
    <string name="action_print">Print</string>
    <string name="action_reload">Reload</string>
    <string name="action_remove_bookmark">Bookmark removed</string>
    <string name="action_remove">Remove</string>
    <string name="action_restore_all_tabs">Restore all tabs</string>
    <string name="action_restore_tab">Restore tab</string>
    <string name="action_save_session">Save session as</string>
    <string name="action_sessions">Sessions</string>
    <string name="action_share">Share</string>
    <string name="action_show_homepage">Homepage</string>
    <string name="action_webpage">Website</string>
    <string name="action_yes">Yes</string>
    <string name="ad_blocker">Adblocker</string>
    <string name="ad_block_address">Address</string>
    <string name="ad_block_blocked_page">Ad block blocked the following page:</string>
    <string name="ad_block_blocked_filter">Because of the following filter:</string>
    <string name="ad_block_blocked_list_ad">%s on ad blocklist</string>
    <string name="ad_block_blocked_list_malware">%s on malware blocklist</string>
    <string name="ad_block_blocked_list_user">%s blocked by user rule</string>
    <string name="ad_block_edit_blocklist">Edit blocklist</string>
    <string name="ad_block_enable">Enable</string>
    <string name="ad_block_file">File</string>
    <string name="ad_block_from_file">Local</string>
    <string name="ad_block_from_address">Remote</string>
    <string name="ad_block_internal_list">Internal list</string>
    <string name="ad_block_invalid_title">Invalid title</string>
    <string name="ad_block_invalid_url">Invalid address</string>
    <string name="ad_block_last_update">Last update: %s</string>
    <string name="ad_block_load_failure">Failed to load hosts from ad blocking source.</string>
    <string name="ad_block_create_blocklist">Create blocklist</string>
    <string name="ad_block_update_list">Update blocklist file</string>
    <string name="ad_block_update_mode">Automatic update</string>
    <string name="ad_block_update_now">Update lists</string>
    <string name="ad_block_update_on">On</string>
    <string name="ad_block_update_off">Off</string>
    <string name="ad_block_update_wifi">Only via WLAN</string>
    <string name="ad_server_list">AdGuard Ad-Server List</string>
    <string name="agent_android_mobile">Android (Mobile)</string>
    <string name="agent_custom">Custom</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_ios_mobile">iOS (Mobile)</string>
    <string name="agent_linux_desktop">Linux (Desktop)</string>
    <string name="agent_macos_desktop">macOS (Desktop)</string>
    <string name="agent_system">System</string>
    <string name="agent_web_view">WebView</string>
    <string name="agent_windows_desktop">Windows (Desktop)</string>
    <string name="agent">User agent</string>
    <string name="algorithm">Algorithm</string>
    <string name="allow_javascript">Allow JavaScript for this site</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="apache" translatable="false">Apache License 2.0</string>
    <string name="apply">Apply</string>
    <string name="black_theme">Black (AMOLED)</string>
    <string name="block_ads">Block ads</string>
    <string-array name="block_javascript">
        <item>@string/no</item>
        <item>@string/unlisted_javascript</item>
        <item>@string/listed_javascript</item>
    </string-array>
    <string name="block_mining">Block mining sites</string>
    <string name="block_sites_title">Separate sites with a comma</string>
    <string name="block_source_default">Default hosts</string>
    <string name="block_source_local_description">File: %1$s</string>
    <string name="block_source_remote_description">URL: %1$s</string>
    <string name="blocked_javascript">Block JavaScript for this site</string>
    <string name="bookmark_export_failure">Sorry, bookmarks could not be exported!</string>
    <string name="bookmark_export_path">Bookmarks exported:</string>
    <string name="bookmark_in_new_tab">Bookmark in new tab</string>
    <string name="bookmark_restore">Bookmarks restored</string>
    <string name="bookmark_settings">Bookmarks</string>
    <string name="busy">Busy, try again shortly."</string>
    <string name="button_image">Image</string>
    <string name="button_link">Link</string>
    <string name="button_undo">Undo</string>
    <string name="cache">Clear cache on exit</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="clean_settings">This will delete all data that Holla has stored on your device! The app will exit when you confirm it.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="clear_history">Clear browser history</string>
    <string name="clear_web_storage_exit">Clear web storage on exit</string>
    <string name="clear_web_storage">Clear web storage</string>
    <string name="close">Close</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="close_on_last_tab">Close browser with last tab</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="close_tab">Close current tab</string>
    <string name="color_mode">Color mode</string>
    <string name="cookies">Enable cookies</string>
    <string name="credits_fulguris" translatable="false">Fulguris</string>
    <string name="credits_lightning_browser" translatable="false">Lightning Browser</string>
    <string name="credits_smartcookieweb" translatable="false">SmartCookieWeb</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_theme">Dark</string>
    <string name="default_theme">Follow System</string>
    <string name="delete_all_bookmarks">Delete all bookmarks?</string>
    <string name="developer">Developer</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="dialog_copy_link">Copy link</string>
    <string name="dialog_copy_text">Copy text</string>
    <string name="dialog_delete_all_downloads">Delete all downloads</string>
    <string name="dialog_download_image">Download image</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="dialog_edit_bookmark">Edit bookmark</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_message_third_party_app">Do you want to launch the application associated with that web site?</string>
    <string name="dialog_open_background_tab">Open in background tab</string>
    <string name="dialog_open_incognito_tab">Open in incognito tab</string>
    <string name="dialog_open_new_tab">Open in new tab</string>
    <string name="dialog_remove_bookmark">Remove bookmark</string>
    <string name="dialog_remove_folder">Remove folder</string>
    <string name="dialog_remove_from_history">Remove from history</string>
    <string name="dialog_removed_from_history">Removed from history</string>
    <string name="dialog_rename_folder">Rename folder</string>
    <string name="dialog_title_close_browser">Close browser</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_title_third_party_app">Third-party app available</string>
    <string name="dialog_tools_title">Page tools</string>
    <string name="home">New Tab</string>
    <string name="import_export_settings">Import &amp; Export</string>
    <string name="recommended">Recommended</string>
    <string name="settings_about">About</string>
    <string name="settings_adblock">Ad Block</string>
    <string name="settings_adminingblocker">Ad &amp; Mining Blocker</string>
    <string name="settings_display">Look &amp; feel</string>
    <string name="settings_general">General</string>
    <string name="settings_mining">Mining</string>
    <string name="settings_portrait_landscape">Portrait &amp; Landscape</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_summary_about">Version, author, license…</string>
    <string name="settings_summary_apps">Third party applications…</string>
    <string name="settings_summary_adminingblocker">Block advertising, tracking, mining…</string>
    <string name="settings_summary_display">App design, accent color, color mode…</string>
    <string name="settings_summary_general">Homepage, search services, JavaScript…</string>
    <string name="settings_summary_import_export">Backup, restore, reset…</string>
    <string name="settings_summary_tabs">Tab position, new tab, bottom sheets…</string>
    <string name="settings_summary_portraitlandscape">Pull-to-Refresh, toolbar, drawer…</string>
    <string name="settings_summary_privacy">Cache, history, cookies…</string>
    <string name="settings_title_apps">Apps</string>
    <string name="tabs">Tabs</string>
    <string name="theme">Theme</string>
    <string name="pref_key_blocklist_auto_update" translatable="false">pref_key_blocklist_auto_update</string>
</resources>