<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.GeneralSettingsFragment"
        app:title="@string/settings_general"
        app:summary="@string/settings_summary_general"
        app:icon="@drawable/ic_settings_oval" />

    <PreferenceCategory
        android:title="@string/theme">

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.DisplaySettingsFragment"
        app:title="@string/settings_display"
        app:summary="@string/settings_summary_display"
        app:icon="@drawable/ic_palette_oval" />

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.PortraitLandscapeSettingsFragment"
        app:icon="@drawable/ic_screen_rotation_oval"
        app:summary="@string/settings_summary_portraitlandscape"
        app:title="@string/settings_portrait_landscape" />

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.TabsSettingsFragment"
        app:title="@string/tabs"
        app:summary="@string/settings_summary_tabs"
        app:icon="@drawable/ic_tab_oval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_privacy">

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.PrivacySettingsFragment"
        app:title="@string/settings_privacy"
        app:summary="@string/settings_summary_privacy"
        app:icon="@drawable/ic_security_oval" />

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.AdBlockSettingsFragment"
        app:title="@string/settings_adminingblocker"
        app:summary="@string/settings_summary_adminingblocker"
        app:icon="@drawable/ic_block_oval" />

    </PreferenceCategory>
<!--
    <androidx.preference.Preference
        android:visibility="invisible"
        app:fragment="com.hollabrowser.meforce.settings.fragment.ExtensionsSettingsFragment"
        app:icon="@drawable/ic_extension_oval"
        app:summary="@string/settings_summary_extensions"
        app:title="@string/settings_extensions"
        tools:visibility="invisible" />-->

    <PreferenceCategory
        android:title="@string/developer">

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.ImportExportSettingsFragment"
        app:title="@string/import_export_settings"
        app:summary="@string/settings_summary_import_export"
        app:icon="@drawable/ic_import_export_oval" />

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.AppsSettingsFragment"
        app:title="@string/settings_title_apps"
        app:summary="@string/settings_summary_apps"
        app:icon="@drawable/ic_apps_oval" />

    <androidx.preference.Preference
        app:fragment="com.hollabrowser.meforce.settings.fragment.AboutSettingsFragment"
        app:title="@string/settings_about"
        app:summary="@string/settings_summary_about"
        app:icon="@drawable/ic_about_oval" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
